@startuml
'https://plantuml.com/class-diagram

logic.FoodStorage <|-- entity.Ingredient
logic.RecipeBook <|-- logic.Recipe
logic.Recipe <|-- entity.Ingredient
ui.UserInterface <|-- logic.FoodStorage
ui.UserInterface <|-- logic.RecipeBook
ui.Main <|-- ui.UserInterface
ui.InputParser --|> ui.UserInterface

class ui.UserInterface {
init()
start()
Displays information to the user
Executes input from InputParser
}

class ui.InputParser {
Interprets input from the user
getIntInput()
getStringInput()
getDoubleInput()
}

class ui.Main {
main(String[] args)
Runs the program
}


class logic.FoodStorage {
ArrayList<Ingredient>()
Keeps track of and does operations
with the ingredients
}

class logic.RecipeBook {
HashMap<String, Recipe>()
Keeps track of and does operations
with the recipes.
}

class logic.Recipe {
Holds the information of the recipe
and does operations with the ingredients
in the recipe
+name: String
+Instruction: String
HashMap<String, Ingredient>()
}

class entity.Ingredient {
Holds information about an ingredient
+name: String
+amount: double
+unit: String
+price: double
+expiration date: LocalDate
}




@enduml